# pl

./: .gitignore  CMakeLists.txt  README.md  build.ps1
src/: analyzer.cpp  analyzer.hpp  ast.hpp  codegen.cpp  codegen.hpp  error.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  symbol.cpp  symbol.hpp  token.hpp
test/cases/valid/: 02_arith.tc  03_if.tc  06_const.tc  07_recursion.tc  08_scope.tc  09_break_continue.tc  10_short_circuit.tc  11_param_mod.tc  12_many_params.tc  13_globals.tc  14_void_func.tc
